--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     
   </head>
-  <body>
-    <image src="sodas_banner.jpg"/>
+  <body style="margin:0">
+    <image src="sodas_banner.jpg" style="width:100%;/>
   </body>
 </html>
