--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     
   </head>
   <body style="margin:0">
-    <image src="sodas_banner.jpg" style="width:100%;/>
+    <image src="sodas_banner.jpg" style="width:100%;"/>
   </body>
 </html>
