--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     
   </head>
-  <body style="margin:0">
-    <image src="sodas_banner.jpg" style="width:100%;"/>
+  <body style="margin:0; display:flex; height:100%">
+    <image src="sodas_banner.jpg" style="width:100%;align-self:center"/>
   </body>
 </html>
